Ready to try using this

--- a/D/DSGE/Versions.toml
+++ b/D/DSGE/Versions.toml
@@ -1,56 +1,76 @@
+
 ["0.5.0"]
-git-tree-sha1 = "d3525c855995b9dff1c94c07508b563b28896987"
+  git-tree-sha1 = "d3525c855995b9dff1c94c07508b563b28896987"
+  nix-sha256 = "0551kyx2nwjyj432g8dnccbwy51780bz4alzykaf8m5sf80cvzz3"
 
 ["0.5.1"]
-git-tree-sha1 = "c3aa6916285ec08761ed0d060905d77c89251429"
+  git-tree-sha1 = "c3aa6916285ec08761ed0d060905d77c89251429"
+  nix-sha256 = "19d5hn9gl4fjriy5l2cmhnq3j2y30lc380g5ryvgm1187f13g57p"
 
 ["0.6.0"]
-git-tree-sha1 = "584a132876608deae2e44e664f8c108acbd8ddeb"
+  git-tree-sha1 = "584a132876608deae2e44e664f8c108acbd8ddeb"
+  nix-sha256 = "0j75z40l7wcvc3ky0fh9r54lpwh4465j583x0qsi43bxicjxjswl"
 
 ["0.7.0"]
-git-tree-sha1 = "39c5c2e3eea25baee3e611475ad8a17426de6a5a"
+  git-tree-sha1 = "39c5c2e3eea25baee3e611475ad8a17426de6a5a"
+  nix-sha256 = "04c50h38xcv6yz440vkjlaz4cj6kwgxp8q2pk6rxszy46iwnilpv"
 
 ["0.7.1"]
-git-tree-sha1 = "4a35012e920c25132c5dded2590d8dcb31bc1430"
+  git-tree-sha1 = "4a35012e920c25132c5dded2590d8dcb31bc1430"
+  nix-sha256 = "0c66d6ablysyqknzvszbsyldkgwgm6wx2f13pw2gds01qs9psqlq"
 
 ["0.7.2"]
-git-tree-sha1 = "13162c593255b2ac09504da58872857bae35c775"
+  git-tree-sha1 = "13162c593255b2ac09504da58872857bae35c775"
+  nix-sha256 = "1vsb81iq89zpnzm84avsqq9xvvhdgf5lfkfb9gcgvv7sbypmv7gc"
 
 ["0.8.0"]
-git-tree-sha1 = "7af54b5b8ba24544170a2ba15737d26d34d82f3d"
+  git-tree-sha1 = "7af54b5b8ba24544170a2ba15737d26d34d82f3d"
+  nix-sha256 = "07kp1dgw1wkv872i81v3myc2b99a5rvngwnygcmv8wx5nxvfif6l"
 
 ["0.8.1"]
-git-tree-sha1 = "3087b94acf7048aade88296fe20638bb1b4509e1"
+  git-tree-sha1 = "3087b94acf7048aade88296fe20638bb1b4509e1"
+  nix-sha256 = "12pwiwlk60r8jvnms6ymzijn5val9ghip1c1lacbikc19cnfp2mp"
 
 ["1.0.0"]
-git-tree-sha1 = "437d458fbac7a52ed657c20d5203036cdb429e06"
+  git-tree-sha1 = "437d458fbac7a52ed657c20d5203036cdb429e06"
+  nix-sha256 = "1m53p8kafqcnj808d856vi9wr7a1z7m1dvfd9qnxqfdpbcs0qdp4"
 
 ["1.1.0"]
-git-tree-sha1 = "4bca7c7aecb1485daa1577e5be7ad886c1d2033c"
+  git-tree-sha1 = "4bca7c7aecb1485daa1577e5be7ad886c1d2033c"
+  nix-sha256 = "0m3ghq11v59lzl5qjr9iwhpka7083bacn3bxmxj921i76r3qmz1w"
 
 ["1.1.1"]
-git-tree-sha1 = "786e6080f913aeea71203b79138f9f8923524826"
+  git-tree-sha1 = "786e6080f913aeea71203b79138f9f8923524826"
+  nix-sha256 = "0v0zsgak57vifrmzw9gyxpg2bms0cwpwl6vacwzh7q9p75vc83ws"
 
 ["1.1.2"]
-git-tree-sha1 = "1da23bd006f7fd45d51bdbc94d57271ff1f346c8"
+  git-tree-sha1 = "1da23bd006f7fd45d51bdbc94d57271ff1f346c8"
+  nix-sha256 = "0rh5k466wrbj2b5j7lk7mvvxn56l9syhh71wxzrwxgj91vk42d9a"
 
 ["1.1.3"]
-git-tree-sha1 = "09a072f3da1807a98ae51b22ddfa6f7af792f04c"
+  git-tree-sha1 = "09a072f3da1807a98ae51b22ddfa6f7af792f04c"
+  nix-sha256 = "0b5glig1z871ischchr87q0lz648laxpfmfknqb8jjmyml3kdfnp"
 
 ["1.1.4"]
-git-tree-sha1 = "24f4d098e9aefe642ea1af9e70b71444f83dd0cf"
+  git-tree-sha1 = "24f4d098e9aefe642ea1af9e70b71444f83dd0cf"
+  nix-sha256 = "1p9dj852974wvq2fjn8l2d1mjl13m17igc2jq839pbg5n76y0ygq"
 
 ["1.1.5"]
-git-tree-sha1 = "6562ae97fc550680314e486806f9f1241e7a65ca"
+  git-tree-sha1 = "6562ae97fc550680314e486806f9f1241e7a65ca"
+  nix-sha256 = "1mpqygrwzg1d56h2qrax5v6b55x6fpz8idlia5qk8lp8y5wir1wl"
 
 ["1.1.6"]
-git-tree-sha1 = "a824dcd2f5c93dfb2eb8fa00b34ad8fab5f0d131"
+  git-tree-sha1 = "a824dcd2f5c93dfb2eb8fa00b34ad8fab5f0d131"
+  nix-sha256 = "04lyzxbs2gpdpsl5fldg0cwrlc0mz7frr5q16zm426j5a133m82m"
 
 ["1.2.0"]
-git-tree-sha1 = "70a80a787eb31569091c286b3707abc18830f8d2"
+  git-tree-sha1 = "70a80a787eb31569091c286b3707abc18830f8d2"
+  nix-sha256 = "1485pwrh4rlkyplhg7zsq824hq76jva38kfp2704zvs281bfsz0k"
 
 ["1.2.1"]
-git-tree-sha1 = "abc99e706f077f6c1350efc1b5d0539dbf901b36"
+  git-tree-sha1 = "abc99e706f077f6c1350efc1b5d0539dbf901b36"
+  nix-sha256 = "1b5cyfjnskgl7f6p0gg6x3s0bpb49wqmdjnmipi4x8y41qz37k2c"
 
 ["1.3.0"]
-git-tree-sha1 = "e746a4a5ab9c26d897239e722b0f19d4bb3bd77e"
+  git-tree-sha1 = "e746a4a5ab9c26d897239e722b0f19d4bb3bd77e"
+  nix-sha256 = "1ahi8h3v71vijw1n54vh8z3p183jb35y3ad0b62w53i110qn3s3w"
