--- a/F/FlowAtlas/Versions.toml
+++ b/F/FlowAtlas/Versions.toml
@@ -1,41 +1,56 @@
+
 ["0.1.0"]
-git-tree-sha1 = "e7778517ce87efbe079555e2f71080edc8c6c6b9"
+  git-tree-sha1 = "e7778517ce87efbe079555e2f71080edc8c6c6b9"
+  nix-sha256 = "02prnzcbb5m36zs68hj24cjmdhlgw19ipgdr0xvpaj11d4fkvp3l"
 
 ["0.1.1"]
-git-tree-sha1 = "7a01890984906e392915828980d15fb331704e6b"
-
-["0.1.2"]
-git-tree-sha1 = "4cc7df8972fc815b4886451ac18f6366aa40064b"
-
-["0.1.3"]
-git-tree-sha1 = "85493730880c6f69152436fdd3062cacdb625986"
-
-["0.1.4"]
-git-tree-sha1 = "0c770506727bad994566968640167e8df726838f"
-
-["0.1.5"]
-git-tree-sha1 = "faa23c399a5ce12186dec878e8da38861d576c0f"
-
-["0.1.6"]
-git-tree-sha1 = "cf08f630704432e2f03a6a17389ec3c934d83021"
-
-["0.1.7"]
-git-tree-sha1 = "33ec1523bddcaa3ab249731bff3fa528b68bd518"
-
-["0.1.8"]
-git-tree-sha1 = "8b9f2d78e188a972c27cf43700cecf8b3e34ae04"
-
-["0.1.9"]
-git-tree-sha1 = "67f5cb076056d095dad5abdeffe27aae1df0fdc1"
+  git-tree-sha1 = "7a01890984906e392915828980d15fb331704e6b"
+  nix-sha256 = "0a89d5wsqjg8wc6g8wd8wn4zbfky4hd5jfzjka9nvapfgnbyfr3z"
 
 ["0.1.10"]
-git-tree-sha1 = "a7aa41a89f27e90b956c7b63037741c474d1453a"
+  git-tree-sha1 = "a7aa41a89f27e90b956c7b63037741c474d1453a"
+  nix-sha256 = "01q31i23ndzrjn402lvz3jnq2jcijzsw2hwix9cfb13mpsjzqs66"
 
 ["0.1.11"]
-git-tree-sha1 = "40a7b92c22eb6cbc7cb269d756edd4554904a4c5"
+  git-tree-sha1 = "40a7b92c22eb6cbc7cb269d756edd4554904a4c5"
+  nix-sha256 = "0d9ngvfp4lx5q13zni9rswzdwdvj5yxi9r4yhznia3pah8sgpakd"
 
 ["0.1.12"]
-git-tree-sha1 = "ac0bf01c97122500853d48c3138a1588f86fb0e2"
+  git-tree-sha1 = "ac0bf01c97122500853d48c3138a1588f86fb0e2"
+  nix-sha256 = "0zr1rcjkxj5ykr3xf8cv12i1q31rcrn6n8ys5szxgcsiaam29xdp"
 
 ["0.1.13"]
-git-tree-sha1 = "b31190398c2ec4062fbc45fc5ced1d36723fbe68"
+  git-tree-sha1 = "b31190398c2ec4062fbc45fc5ced1d36723fbe68"
+  nix-sha256 = "1fx5yc6g7y5nhr514f0dzmi3f1pc6isq8k7pqnkgjvkgs8ira83m"
+
+["0.1.2"]
+  git-tree-sha1 = "4cc7df8972fc815b4886451ac18f6366aa40064b"
+  nix-sha256 = "0vxphwgsgy0vxzmvw2mczpa7dhzyn46mm3v6dp8afjc96inx9b6b"
+
+["0.1.3"]
+  git-tree-sha1 = "85493730880c6f69152436fdd3062cacdb625986"
+  nix-sha256 = "1nqks0d2qsqsdk9aw8vn4zn7svv1a2m6937jbpxv97zli036riza"
+
+["0.1.4"]
+  git-tree-sha1 = "0c770506727bad994566968640167e8df726838f"
+  nix-sha256 = "0pakl1zi2xvgird4zfmrmi0p66n38dgwn834g3naqry54mznksf9"
+
+["0.1.5"]
+  git-tree-sha1 = "faa23c399a5ce12186dec878e8da38861d576c0f"
+  nix-sha256 = "1p7n344ggvn0fj80xicyb57r7gv1adcqmm5frdp3yzvqzpjavz5y"
+
+["0.1.6"]
+  git-tree-sha1 = "cf08f630704432e2f03a6a17389ec3c934d83021"
+  nix-sha256 = "0gp194jjcf4clhj5k1cmbvl76gmx39ychvf7y0ijk8rxlsf31ikw"
+
+["0.1.7"]
+  git-tree-sha1 = "33ec1523bddcaa3ab249731bff3fa528b68bd518"
+  nix-sha256 = "1jlw0yln3k32yzqmkmx34wbi3snhhkbf2rpaqjsa7h1av0prj0y9"
+
+["0.1.8"]
+  git-tree-sha1 = "8b9f2d78e188a972c27cf43700cecf8b3e34ae04"
+  nix-sha256 = "0w9lhx0n0dngyykwasm1w2v5lz90fvnm8x5ha0m5hx4bkf5z7fjd"
+
+["0.1.9"]
+  git-tree-sha1 = "67f5cb076056d095dad5abdeffe27aae1df0fdc1"
+  nix-sha256 = "13im9ja4y0nl69sqc3z2p6a2vskga3phagl073rwc36mhdja09a0"
