--- a/M/MPIFiles/Versions.toml
+++ b/M/MPIFiles/Versions.toml
@@ -1,143 +1,192 @@
+
 ["0.1.3"]
-git-tree-sha1 = "ade949f8c55a91c9296ad0a06448d48f249a68a1"
-
-["0.5.0"]
-git-tree-sha1 = "707c088c3ff1a9c4da034e80e7743c81bbe43077"
-
-["0.5.1"]
-git-tree-sha1 = "ec343d63bf9a17b7ea621478cfec8e7dfc75d6de"
-
-["0.5.2"]
-git-tree-sha1 = "4650cb70628d832b0367ed03cef0f24dc32d8579"
-
-["0.5.3"]
-git-tree-sha1 = "26ebb15abbebb1464fa4ec2a30d51ad1c32889c9"
-
-["0.6.0"]
-git-tree-sha1 = "57ff22377dd0351e2e2a4b955a4edd81bc04bc5e"
-
-["0.6.1"]
-git-tree-sha1 = "979f0627cd5901f40d3a8bc959cfd446dcdf8fac"
-
-["0.6.2"]
-git-tree-sha1 = "a98c7519431bf2b6106f209f27f06acce77b9dea"
-
-["0.6.3"]
-git-tree-sha1 = "e8305df5e797dafc17a6100867917d170a4f8e87"
-
-["0.7.0"]
-git-tree-sha1 = "cca988913092faed68f37faf18fe4b7b1f98fe88"
-
-["0.7.1"]
-git-tree-sha1 = "39656b101e3a445139f2658c2e25be53e594b95d"
-
-["0.8.0"]
-git-tree-sha1 = "caab0f81b77c754500ee02bdebc0f4b6e9c754eb"
-
-["0.8.1"]
-git-tree-sha1 = "9e6c0dff8caad97b14ac82de20f86b6d6c86822a"
-
-["0.8.2"]
-git-tree-sha1 = "88dc96cb4b95b65a003352d355978d3df6b6e098"
-
-["0.8.3"]
-git-tree-sha1 = "b8036b107daf55661ea54f1ab707d08f910eca2e"
-
-["0.9.0"]
-git-tree-sha1 = "95f3e130f4efd841063b8d2c37015b736bd7a6b0"
-
-["0.9.1"]
-git-tree-sha1 = "944c335b3aa7577d9f0859ae0fcd0d93d1bd577d"
-
-["0.9.2"]
-git-tree-sha1 = "18df621b6ad39a384b170874ca34ae92f06089e8"
-
-["0.9.3"]
-git-tree-sha1 = "389337d060424604373e6f8250bf5d1f6c61a09a"
-
-["0.9.4"]
-git-tree-sha1 = "7363400ca8967a13e77adb046350e624052e3a2e"
-
-["0.9.5"]
-git-tree-sha1 = "048a088e0cb125a05031f7e25234ef610c298267"
-
-["0.9.6"]
-git-tree-sha1 = "da35a33287fe59ab3d0bb88a178a5012b9a3c386"
+  git-tree-sha1 = "ade949f8c55a91c9296ad0a06448d48f249a68a1"
+  nix-sha256 = "1cgcmic8j3rp0z30izrqdyvm6n2ypw78pdb7j2i09bgf4mjj0xyg"
 
 ["0.10.0"]
-git-tree-sha1 = "08f8f66d4b11813b2a9676cbd4be158c5f631605"
+  git-tree-sha1 = "08f8f66d4b11813b2a9676cbd4be158c5f631605"
+  nix-sha256 = "1marssys8iqw9by8ng6r3ak5nc6r62dmfw8rrf21gwnafwlc0a4j"
 
 ["0.10.1"]
-git-tree-sha1 = "0864488e491c52ad22e134e2d911a65b1297fa02"
+  git-tree-sha1 = "0864488e491c52ad22e134e2d911a65b1297fa02"
+  nix-sha256 = "1wdzsz30jxy8cd087mcdxk0i1pl5w0m1xrm2ivfcsqfg9hx5larw"
 
 ["0.10.2"]
-git-tree-sha1 = "2ce19e24928fd1bc6f67182f2872c6fc851b7872"
+  git-tree-sha1 = "2ce19e24928fd1bc6f67182f2872c6fc851b7872"
+  nix-sha256 = "0a1hg5w81dz79zxkipqq27imqx21mv4wmgpqm3sffqfjp0hv0pd5"
 
 ["0.10.3"]
-git-tree-sha1 = "25f65ac347f369c27e2cdf0976a2c2b0003436ca"
+  git-tree-sha1 = "25f65ac347f369c27e2cdf0976a2c2b0003436ca"
+  nix-sha256 = "13pi2kb3cn56rbvsxq8zw53mr55bjkv350vccd73jspwwr0r2dbj"
 
 ["0.11.0"]
-git-tree-sha1 = "7db589273595cc6227e0c4344df87ee4722a3020"
+  git-tree-sha1 = "7db589273595cc6227e0c4344df87ee4722a3020"
+  nix-sha256 = "1zlhw4yz2692zrxnjaqs0kav9zrachczhzbzwd0acvjr4132xcam"
 
 ["0.11.1"]
-git-tree-sha1 = "ccb8ca42fc035c229ca45ecd3eb8e2a6c3daf15b"
-
-["0.11.2"]
-git-tree-sha1 = "e1be484934adcd6fcdde94adb86448ae66ad68d1"
-
-["0.11.3"]
-git-tree-sha1 = "76378b2d0f5d2f69846a15af5a51cfd02adbb6e0"
-
-["0.11.4"]
-git-tree-sha1 = "ceddfd1578f18835ff9ec31865ba269581345ce9"
-
-["0.11.5"]
-git-tree-sha1 = "081afa7efa7e01ddbc6e9713c1346d84435c15d9"
-
-["0.11.6"]
-git-tree-sha1 = "ebf57089aecc3468233dbefa27b563c873d51d7f"
-
-["0.11.7"]
-git-tree-sha1 = "6889623c75abb1e5c02f9eaf7109895182d16fe1"
-
-["0.11.8"]
-git-tree-sha1 = "eb45809112889e46e39835faaf38a0183f0d9817"
-
-["0.11.9"]
-git-tree-sha1 = "5f507169ce0244b8edad62af39dd64aaa10ccfa1"
+  git-tree-sha1 = "ccb8ca42fc035c229ca45ecd3eb8e2a6c3daf15b"
+  nix-sha256 = "0i67m9v2sjd9lfwqr418hpk5l2fkgf88i0i7m8yv46dys76lcn7z"
 
 ["0.11.10"]
-git-tree-sha1 = "5e31e1b0ad274141ee5a951543afcf2e67837fa9"
+  git-tree-sha1 = "5e31e1b0ad274141ee5a951543afcf2e67837fa9"
+  nix-sha256 = "092apb8lsr22ifp9wwlizs2b1523rwklwgn00gbcw5rxskrdp28q"
 
 ["0.11.11"]
-git-tree-sha1 = "a3f785c62b241cc3de1fab012c401fcb85816275"
+  git-tree-sha1 = "a3f785c62b241cc3de1fab012c401fcb85816275"
+  nix-sha256 = "19vfljm8nl2nhb83pkpc2jq4sh41sms866nn24pqh8xrvk55pfbr"
 
 ["0.11.12"]
-git-tree-sha1 = "759bd33f317e34625ec4e6c7ba6cc7282b825b9e"
+  git-tree-sha1 = "759bd33f317e34625ec4e6c7ba6cc7282b825b9e"
+  nix-sha256 = "0baphkpkx33plkm0lwydh11xl7bxa3s1jckfgxm6rxdy7z2n5c2y"
 
 ["0.11.13"]
-git-tree-sha1 = "b6361ccd204defef4dca8c2ec8fc426ec6ef29bb"
+  git-tree-sha1 = "b6361ccd204defef4dca8c2ec8fc426ec6ef29bb"
+  nix-sha256 = "0mb97wag3s2jgldpfxky9yyqdhb57i6hhrrdw2ggjap3qz12gh8g"
 
 ["0.11.14"]
-git-tree-sha1 = "58a02ad48932f257a6af4b169015a58fbc5d8051"
+  git-tree-sha1 = "58a02ad48932f257a6af4b169015a58fbc5d8051"
+  nix-sha256 = "19ch862ynk0nd1b4x1vl3jzzcahxddqaj89s5vbjx06dpmb4m16d"
+
+["0.11.2"]
+  git-tree-sha1 = "e1be484934adcd6fcdde94adb86448ae66ad68d1"
+  nix-sha256 = "0zd6kn4vy5nf1n1zml2rlhjdnhqmbhcb4mq8ilz3bw1m2m9wbr6h"
+
+["0.11.3"]
+  git-tree-sha1 = "76378b2d0f5d2f69846a15af5a51cfd02adbb6e0"
+  nix-sha256 = "0ab7dcgfyc8iz1wzl52nvjsgq5y46n0zw1q1nwy7scx2v7yzzsk6"
+
+["0.11.4"]
+  git-tree-sha1 = "ceddfd1578f18835ff9ec31865ba269581345ce9"
+  nix-sha256 = "1xr5f35x05bw067hjdpswg7rlbrqzvp3435k0bxzk3dxqxsmyxx3"
+
+["0.11.5"]
+  git-tree-sha1 = "081afa7efa7e01ddbc6e9713c1346d84435c15d9"
+  nix-sha256 = "0ck1j0cpcsdkmqabhilpivkqr06j4qgrbh10s8gpzi1dk7fky232"
+
+["0.11.6"]
+  git-tree-sha1 = "ebf57089aecc3468233dbefa27b563c873d51d7f"
+  nix-sha256 = "1flsrfwk83zncwbr9isb84zmcysf6yd6i3swjihfgslc9gjrrd74"
+
+["0.11.7"]
+  git-tree-sha1 = "6889623c75abb1e5c02f9eaf7109895182d16fe1"
+  nix-sha256 = "0jf1pad9ggax0hk9sgh45br1rif24hnqmrbzpncbv9g5ya18wy50"
+
+["0.11.8"]
+  git-tree-sha1 = "eb45809112889e46e39835faaf38a0183f0d9817"
+  nix-sha256 = "1mwh6ck1dlal6g7amfssylxmxfic0dgw5vdwdi8mlkm7972w1nfw"
+
+["0.11.9"]
+  git-tree-sha1 = "5f507169ce0244b8edad62af39dd64aaa10ccfa1"
+  nix-sha256 = "0d2ps5p3ixfkk30j95lqsfxln86xpnfhlndlp80l2qswi36w1rxn"
 
 ["0.12.0"]
-git-tree-sha1 = "b49c973cfce0b518df5586d7f80a16ad22071acf"
+  git-tree-sha1 = "b49c973cfce0b518df5586d7f80a16ad22071acf"
+  nix-sha256 = "1czza3fylphs8zy2dsv16gds62q7bx3ilkm895j0gdgmif230lc7"
 
 ["0.12.1"]
-git-tree-sha1 = "25aa72b696029c9856b9c0dd53133b5564620695"
+  git-tree-sha1 = "25aa72b696029c9856b9c0dd53133b5564620695"
+  nix-sha256 = "0pzjsmzxpsyh22syic3fpb5m9vh1dmq89j7hz0m28y3ixw4y3giv"
 
 ["0.12.2"]
-git-tree-sha1 = "6e1891b8f237c4b0d09eeaeb7f3662a2efb19e52"
+  git-tree-sha1 = "6e1891b8f237c4b0d09eeaeb7f3662a2efb19e52"
+  nix-sha256 = "1pk1hvnl7f8kvyj6nvbmn5cd5vxlhl1jcdl1n5mriinjyh1pvziz"
 
 ["0.12.3"]
-git-tree-sha1 = "70c534e0957a2342c805cb2ec023345e7a14f46d"
+  git-tree-sha1 = "70c534e0957a2342c805cb2ec023345e7a14f46d"
+  nix-sha256 = "1g7snsxkassgb20ajg82pafw4kzzssb3f80jj90frwsjmddzglra"
 
 ["0.12.4"]
-git-tree-sha1 = "05512ec683faa538232558d3cfb7ebfb3c0c636e"
+  git-tree-sha1 = "05512ec683faa538232558d3cfb7ebfb3c0c636e"
+  nix-sha256 = "01523abfz958xg8qsldcznby9rax4qi0vjdiwv5f5cq4jcfp70gw"
 
 ["0.12.5"]
-git-tree-sha1 = "2f90e5bc54994cf9afd84aad535ba4f39acd814d"
+  git-tree-sha1 = "2f90e5bc54994cf9afd84aad535ba4f39acd814d"
+  nix-sha256 = "1ldxh6srz8ci39vp4cr80sr4qjmfigl8sip644j1sc1ny4h6q8wa"
 
 ["0.12.6"]
-git-tree-sha1 = "b982363cc08e1f438778383246ef1c33b8213861"
+  git-tree-sha1 = "b982363cc08e1f438778383246ef1c33b8213861"
+  nix-sha256 = "1xi0qn3b7ps8zhb6jklvzxrzv8qqnzafs5pb5dikpgbcfam06gid"
+
+["0.5.0"]
+  git-tree-sha1 = "707c088c3ff1a9c4da034e80e7743c81bbe43077"
+  nix-sha256 = "1r2z21jp240gppyh6f93fw3gbc9cibg8afm2r0kxwi9pvdcp9a3k"
+
+["0.5.1"]
+  git-tree-sha1 = "ec343d63bf9a17b7ea621478cfec8e7dfc75d6de"
+  nix-sha256 = "1ng5ngayba6sgl44vp5jnz0myxl4lrrb4q7xr123ipq6yzvh4kdy"
+
+["0.5.2"]
+  git-tree-sha1 = "4650cb70628d832b0367ed03cef0f24dc32d8579"
+  nix-sha256 = "04ai3yn52hz50m43n7y02a9w32ikwgmca2cv82fy94ryazkfd8xv"
+
+["0.5.3"]
+  git-tree-sha1 = "26ebb15abbebb1464fa4ec2a30d51ad1c32889c9"
+  nix-sha256 = "1jqkvzkr5ycd5fcrw0wcwbmz09vjbjxxm03m9yq1ic7h9p5b0z14"
+
+["0.6.0"]
+  git-tree-sha1 = "57ff22377dd0351e2e2a4b955a4edd81bc04bc5e"
+  nix-sha256 = "0qp4zdz16s57ag18dacmpjlymajvank7hfpm9r35la184v6bk8vb"
+
+["0.6.1"]
+  git-tree-sha1 = "979f0627cd5901f40d3a8bc959cfd446dcdf8fac"
+  nix-sha256 = "0zryq5n74g8jn902nx15gmpqm1ixgzjq93q159n2h0kacwsi09xr"
+
+["0.6.2"]
+  git-tree-sha1 = "a98c7519431bf2b6106f209f27f06acce77b9dea"
+  nix-sha256 = "1y7rsic5rzk6frx4vk3r3qqid9ypngcbg5cs5a7fx5fm7cry5m70"
+
+["0.6.3"]
+  git-tree-sha1 = "e8305df5e797dafc17a6100867917d170a4f8e87"
+  nix-sha256 = "1x2pdscfc10ayxilijka8z1sraaix7gq5k9051pdniycdk84gbmf"
+
+["0.7.0"]
+  git-tree-sha1 = "cca988913092faed68f37faf18fe4b7b1f98fe88"
+  nix-sha256 = "0sq2lgm7p35g8vqnb0cy0f134mj0dph2m191kg9r9865m5gai4sa"
+
+["0.7.1"]
+  git-tree-sha1 = "39656b101e3a445139f2658c2e25be53e594b95d"
+  nix-sha256 = "0fvzfy7labvk8sgvz696cfv77f4fayfmbkx4vq5k2d2735b9707q"
+
+["0.8.0"]
+  git-tree-sha1 = "caab0f81b77c754500ee02bdebc0f4b6e9c754eb"
+  nix-sha256 = "1bf8pm3q2yaibfqbngvg94dvx07sndjmar48bvarnzbs3ln8k96n"
+
+["0.8.1"]
+  git-tree-sha1 = "9e6c0dff8caad97b14ac82de20f86b6d6c86822a"
+  nix-sha256 = "19h119122qfybpqj7swn77hqpgvlzy37xyyi4m7zkb8rjcrxj9gq"
+
+["0.8.2"]
+  git-tree-sha1 = "88dc96cb4b95b65a003352d355978d3df6b6e098"
+  nix-sha256 = "1rvk207gfbp25m417yn1n6fqkm05ij6ly7m74b4m370sw2f2rf7f"
+
+["0.8.3"]
+  git-tree-sha1 = "b8036b107daf55661ea54f1ab707d08f910eca2e"
+  nix-sha256 = "1p4226mr8xg4crhx1jfnz8bvmghmzq61d6k64813s4aszd1df57a"
+
+["0.9.0"]
+  git-tree-sha1 = "95f3e130f4efd841063b8d2c37015b736bd7a6b0"
+  nix-sha256 = "10dg3f5r0y0iqlk8f58am65bl7xsk2k0p9585vcpjj65jzbrr14v"
+
+["0.9.1"]
+  git-tree-sha1 = "944c335b3aa7577d9f0859ae0fcd0d93d1bd577d"
+  nix-sha256 = "18vnczrd9msyjsj6a3x189i1dcr6var9n3mgf6f8hn3pl2vi7lrg"
+
+["0.9.2"]
+  git-tree-sha1 = "18df621b6ad39a384b170874ca34ae92f06089e8"
+  nix-sha256 = "0a5nfdhjbak2bmyppr09qh1dqh75h2v32pmaanxci6mj7idjr0wd"
+
+["0.9.3"]
+  git-tree-sha1 = "389337d060424604373e6f8250bf5d1f6c61a09a"
+  nix-sha256 = "03nzcfdlqg3d1nb46612wnj6v0q7dfxaql03z65q2jlhz2j550la"
+
+["0.9.4"]
+  git-tree-sha1 = "7363400ca8967a13e77adb046350e624052e3a2e"
+  nix-sha256 = "1hy5i11bancdgf8z7m2bwlkszwpbg5gwvggv95l17jm4fwjbxw3r"
+
+["0.9.5"]
+  git-tree-sha1 = "048a088e0cb125a05031f7e25234ef610c298267"
+  nix-sha256 = "0lmd96awdid1gczm2rmcmh0zjcsd1jf84rnhv6h5g9hm8vv0pqc6"
+
+["0.9.6"]
+  git-tree-sha1 = "da35a33287fe59ab3d0bb88a178a5012b9a3c386"
+  nix-sha256 = "0kd0myb2x9dhnwcvbydkbb3x4164a7lqpdz76q23s1dfiy35knrg"
