--- a/R/REopt/Versions.toml
+++ b/R/REopt/Versions.toml
@@ -1,80 +1,108 @@
+
 ["0.12.3"]
-git-tree-sha1 = "2c61ca960a641fb6fb0a36331f7b38138a533d12"
+  git-tree-sha1 = "2c61ca960a641fb6fb0a36331f7b38138a533d12"
+  nix-sha256 = "1s7cldabjw4h2h2kx6w6bhbdh0ddg3phh6l8i6sd04yj26fkfw0q"
 
 ["0.12.4"]
-git-tree-sha1 = "77603561dae37370c726ad1e73be099e3cd846a8"
+  git-tree-sha1 = "77603561dae37370c726ad1e73be099e3cd846a8"
+  nix-sha256 = "0dc786zv5x02kcxylrv13mclrx9njjhs66hp3qpn7580rp1wxwkg"
 
 ["0.13.0"]
-git-tree-sha1 = "494e6fbfe14d1a90568f8f2d5cf0d7db460075b2"
+  git-tree-sha1 = "494e6fbfe14d1a90568f8f2d5cf0d7db460075b2"
+  nix-sha256 = "0w5nphnchlsm2pp28ic0iz63km25zl9mg5inw0krq433bdlkcwlp"
 
 ["0.14.0"]
-git-tree-sha1 = "8d3ef0ede83705ea0bc31e63f7d98977f5f8d064"
+  git-tree-sha1 = "8d3ef0ede83705ea0bc31e63f7d98977f5f8d064"
+  nix-sha256 = "0s8z0adw8viwb87yv1672lxi0sj85fj1m6n6b32h0jar6aij74g1"
 
 ["0.15.0"]
-git-tree-sha1 = "d450c849dd54cbd09c1d66bed2f77a81ab0b0295"
+  git-tree-sha1 = "d450c849dd54cbd09c1d66bed2f77a81ab0b0295"
+  nix-sha256 = "001p05wl9qfwq3qzyyqq6fz096464wfh4f8kbv17dx2g21v8iir1"
 
 ["0.15.1"]
-git-tree-sha1 = "97eac9ae876329e9d72b08d269465b1eceea7f3e"
+  git-tree-sha1 = "97eac9ae876329e9d72b08d269465b1eceea7f3e"
+  nix-sha256 = "0jzf0whx74rx1qw7hs0klzg4k1v5mmj6pnya5qn4fzga4rfhwb3p"
 
 ["0.15.2"]
-git-tree-sha1 = "803189d35a67d507e6ca16078ce1c98febbcf0ba"
+  git-tree-sha1 = "803189d35a67d507e6ca16078ce1c98febbcf0ba"
+  nix-sha256 = "1hn88xfvdz348yypb62lwi9ih02lrq4f2x15hixr8jdq3m90d8pl"
 
 ["0.16.0"]
-git-tree-sha1 = "b5e37ac98d2c36d13f3caf3bb951c52de5062e88"
+  git-tree-sha1 = "b5e37ac98d2c36d13f3caf3bb951c52de5062e88"
+  nix-sha256 = "02j6fhl999ghgp9cm4scbbzgw1cjcag86sn56r59fyn7xwnv5h07"
 
 ["0.16.1"]
-git-tree-sha1 = "28985573461af3fecb44b23ed5d4399e02e6327d"
+  git-tree-sha1 = "28985573461af3fecb44b23ed5d4399e02e6327d"
+  nix-sha256 = "18yvf7rgwwngv7isggkmgzwf2abwinpsvl1pxh1qrr1wzw1mqn4k"
 
 ["0.16.2"]
-git-tree-sha1 = "f281e867ed0b0ca7c18b8a0cdeb8d10a172422fd"
+  git-tree-sha1 = "f281e867ed0b0ca7c18b8a0cdeb8d10a172422fd"
+  nix-sha256 = "02rmhi67x4y0kq9xxhzq9llr9pqhny2q8lf7cwp5r2ddywhnjlqn"
 
 ["0.17.0"]
-git-tree-sha1 = "b2897397ecce26d3ba1a56367275f5b817a7c3a9"
+  git-tree-sha1 = "b2897397ecce26d3ba1a56367275f5b817a7c3a9"
+  nix-sha256 = "0m24c1qn1jn4l6r2mha2q6kvzs9bmwhq5vh07z16jb5wcvcjl14y"
 
 ["0.18.0"]
-git-tree-sha1 = "6f20c5c104cb6364be2fc35d73a022b7cd622d89"
+  git-tree-sha1 = "6f20c5c104cb6364be2fc35d73a022b7cd622d89"
+  nix-sha256 = "184z4i4h7ghkynggsgzm5l7qgmqa7k4lk54ppwpfy9bgpcg4ysv5"
 
 ["0.18.1"]
-git-tree-sha1 = "f20da365c1cf263e3bfe0b1453eb7c6212df30d1"
+  git-tree-sha1 = "f20da365c1cf263e3bfe0b1453eb7c6212df30d1"
+  nix-sha256 = "0i8kk1imgifj4lzg35177xhcqszc5x2narq1wfj93dymgdh0193f"
 
 ["0.19.0"]
-git-tree-sha1 = "13a6ae2f66a18b451d3ce67e472d1aedacf7d1a5"
+  git-tree-sha1 = "13a6ae2f66a18b451d3ce67e472d1aedacf7d1a5"
+  nix-sha256 = "0a4i5lv7627c6yhmi8qlmjgi0bzv2ijj83npghvw4a15dmva30rh"
 
 ["0.20.0"]
-git-tree-sha1 = "4b2e8b7ec3bc44a68c7a58c20bc42a04ced820e0"
+  git-tree-sha1 = "4b2e8b7ec3bc44a68c7a58c20bc42a04ced820e0"
+  nix-sha256 = "1v5gfkkraqi6vd10mwjhzxmnmja61sd0zawdahh9my85vgf8gh2i"
 
 ["0.20.1"]
-git-tree-sha1 = "70e34138a437cb1a224646c45e230f90ae2d7283"
+  git-tree-sha1 = "70e34138a437cb1a224646c45e230f90ae2d7283"
+  nix-sha256 = "0klzmscdrj7rx0a6dhvd9ga1v0ig530ss75yawfn026hcw5paazr"
 
 ["0.21.0"]
-git-tree-sha1 = "54cea03bfc7c24c8483bb2a943548cad0aa4b157"
+  git-tree-sha1 = "54cea03bfc7c24c8483bb2a943548cad0aa4b157"
+  nix-sha256 = "0ygxiwag6xxndlxwbrsdfy6bxkacs926bl7win30yhai1gcrq1xw"
 
 ["0.22.0"]
-git-tree-sha1 = "01951cf0e5b4fbdfd9f3a63fb1076346c3fe3b69"
+  git-tree-sha1 = "01951cf0e5b4fbdfd9f3a63fb1076346c3fe3b69"
+  nix-sha256 = "0ghrk65b83m2kmf7ygxlqcabva1gclism1s2k6y21k5abjghaysh"
 
 ["0.23.0"]
-git-tree-sha1 = "92e8055867af9460faba381c44778d7634d54b7b"
+  git-tree-sha1 = "92e8055867af9460faba381c44778d7634d54b7b"
+  nix-sha256 = "1sv4ysc5f6m8nnrqfjcj0s62rxzj34m6mbdr09mwvqyc122cw8x8"
 
 ["0.24.0"]
-git-tree-sha1 = "9c5a19161f6ae306782dc613a8d6c1360247a377"
+  git-tree-sha1 = "9c5a19161f6ae306782dc613a8d6c1360247a377"
+  nix-sha256 = "0j0snd5d2yyjccknl97gn3vz5dlpcvw089kr3zyshw1w6dvsqn7k"
 
 ["0.25.0"]
-git-tree-sha1 = "7c1ceee55c1460444167d80a485e785b759316b8"
+  git-tree-sha1 = "7c1ceee55c1460444167d80a485e785b759316b8"
+  nix-sha256 = "1hrlnvvc6danh1qj7pxqh13nxyq3j547hhb88x6sksx7k4a4d8kp"
 
 ["0.26.0"]
-git-tree-sha1 = "5ea6715c98a2398863b39eb33e0df681faf0410f"
+  git-tree-sha1 = "5ea6715c98a2398863b39eb33e0df681faf0410f"
+  nix-sha256 = "139xrjr3h45p0d93jiqp5drgc7df6kl59h54rf17zzns20mw2g1b"
 
 ["0.27.0"]
-git-tree-sha1 = "3bb28641a7293713f15378205effa3f19dfdc90c"
+  git-tree-sha1 = "3bb28641a7293713f15378205effa3f19dfdc90c"
+  nix-sha256 = "1238f00mxjbgp4xk2fhghlfph0jzw560ga40n0sdja553dsmbz4i"
 
 ["0.28.0"]
-git-tree-sha1 = "1865a036eef47fe44dd4199efc72ba8738f27351"
+  git-tree-sha1 = "1865a036eef47fe44dd4199efc72ba8738f27351"
+  nix-sha256 = "1knkhxsa9dgclybk0vv27y94q92y5kvfmaal44ij9f8ska9l89wz"
 
 ["0.28.1"]
-git-tree-sha1 = "438ef4af2c6066607b163920ac97c101f5c4cae5"
+  git-tree-sha1 = "438ef4af2c6066607b163920ac97c101f5c4cae5"
+  nix-sha256 = "0zhzmw1i1da6hy5hfxq7rg8zmmknnr6n84yc37q6m9jjalvyz475"
 
 ["0.29.0"]
-git-tree-sha1 = "305dd26c9bce888d2e68a19bea428b541c0a05d9"
+  git-tree-sha1 = "305dd26c9bce888d2e68a19bea428b541c0a05d9"
+  nix-sha256 = "00k6j9qqyx23ws17cqwk1indd18xvj3n30pqi01r5i81yyy7q6gf"
 
 ["0.30.0"]
-git-tree-sha1 = "dc83e43976297b559efa58f8192d8d8ed75ce77a"
+  git-tree-sha1 = "dc83e43976297b559efa58f8192d8d8ed75ce77a"
+  nix-sha256 = "1w775qp054dx5x1a9hqsc0m24zy25nry4a1wbl5mmix856h5qgi9"
