--- a/T/Transformers/Versions.toml
+++ b/T/Transformers/Versions.toml
@@ -1,113 +1,152 @@
+
 ["0.0.1"]
-git-tree-sha1 = "e81b03fd8c369431bcb34883a522d084b86badae"
+  git-tree-sha1 = "e81b03fd8c369431bcb34883a522d084b86badae"
+  nix-sha256 = "1c2piczi7a8by4zv01y24anxx8cdwyp84mww5nnq3lmavyz2vhx6"
 
 ["0.0.2"]
-git-tree-sha1 = "8abf0557d2d149b96314cd5ad8459847b95f1836"
+  git-tree-sha1 = "8abf0557d2d149b96314cd5ad8459847b95f1836"
+  nix-sha256 = "090cbjnsllks0jg1gn3dxppyabf46dqx5ik6dckvfnpk98ivnwb7"
 
 ["0.0.3"]
-git-tree-sha1 = "5a445c7f4619f44a3b845140eb5d12233fe975d0"
+  git-tree-sha1 = "5a445c7f4619f44a3b845140eb5d12233fe975d0"
+  nix-sha256 = "06p2h1w7ds1dfx3y9iysyiah39rch8s0vhsrijg9rvz305cfrzbf"
 
 ["0.0.6"]
-git-tree-sha1 = "4a5e88a8622f67a0fd1472e723660762c6b83885"
+  git-tree-sha1 = "4a5e88a8622f67a0fd1472e723660762c6b83885"
+  nix-sha256 = "0fil54vzv17hckcai7d3lyka3a86y1ddznf9miqd10yr52rd6cih"
 
 ["0.0.7"]
-git-tree-sha1 = "eaa63299bc86310267c4f551ecb09ad041f6aec1"
+  git-tree-sha1 = "eaa63299bc86310267c4f551ecb09ad041f6aec1"
+  nix-sha256 = "0wdmq5y1bfj681bb4lzqyq5855kcfaqgl4j7cq1ch76i8i5vqjv3"
 
 ["0.0.8"]
-git-tree-sha1 = "cfc8a944ed140581c358a508b8f0af844e969fd9"
+  git-tree-sha1 = "cfc8a944ed140581c358a508b8f0af844e969fd9"
+  nix-sha256 = "1dxcarjmh61fs3szqz8kjgvn94dhw8criaajp0w9mfa64yggbxcy"
 
 ["0.0.9"]
-git-tree-sha1 = "b833a0f940e1341e5ea9a36f7b90c0bb67e1c9d6"
+  git-tree-sha1 = "b833a0f940e1341e5ea9a36f7b90c0bb67e1c9d6"
+  nix-sha256 = "0y6sm9zx0h3xzqg1k8563ni1hhzh4lizx8dqw0qzm7vghzzsc11q"
 
 ["0.1.0"]
-git-tree-sha1 = "1461efb8db776715e267d4200c98a903a1864970"
+  git-tree-sha1 = "1461efb8db776715e267d4200c98a903a1864970"
+  nix-sha256 = "1aqnks5kx31my8kaa4k05z1l80q33d3ak2sl2i9fhvklf3s02n63"
 
 ["0.1.1"]
-git-tree-sha1 = "d0a7c50f29f82a3d3523a8c5c414dd8f7d428c95"
-
-["0.1.2"]
-git-tree-sha1 = "a63fad6555da1fb46ebb6bbd8f430b5f6bac7c3e"
-
-["0.1.3"]
-git-tree-sha1 = "d0244aebf1d02dc9c61e5b747d3fbbc4b66dda90"
-
-["0.1.4"]
-git-tree-sha1 = "67506990b6559bbbdbc27504c4fef97449a0e969"
-
-["0.1.5"]
-git-tree-sha1 = "333346fe8ecf40f3e19cc8161c4715a7a58ec232"
-
-["0.1.6"]
-git-tree-sha1 = "7570f008f12fd6285929d9ddee2201504e85eff2"
-
-["0.1.7"]
-git-tree-sha1 = "962cadb853882a579d885bb0c7d5b7cc72d8b10b"
-
-["0.1.8"]
-git-tree-sha1 = "9ccd136c4b97b97bfedfbfcfad5c616170dafb17"
-
-["0.1.9"]
-git-tree-sha1 = "adae8a5ff79e0ebc37ae2629f59f5c18aa1e1125"
+  git-tree-sha1 = "d0a7c50f29f82a3d3523a8c5c414dd8f7d428c95"
+  nix-sha256 = "10qji7577z9fsp517m7rhp3s1xzaxjaawbdq5cg6ggmfqb0p2a02"
 
 ["0.1.10"]
-git-tree-sha1 = "0c6d7d18b21de2c5a15c88f64cb2ec6c7f058f9e"
+  git-tree-sha1 = "0c6d7d18b21de2c5a15c88f64cb2ec6c7f058f9e"
+  nix-sha256 = "1y7wj6xp27wn8syymdmr8fcg8pplys7v07qjm19jmqdi01b0nk76"
 
 ["0.1.11"]
-git-tree-sha1 = "24f8b9ee51bedfc315a555efffcfe4d541e73d46"
+  git-tree-sha1 = "24f8b9ee51bedfc315a555efffcfe4d541e73d46"
+  nix-sha256 = "02cic4ld53wnifiqx8sq7n6k95sv0w2v75anc22dm616f66hly1m"
 
 ["0.1.12"]
-git-tree-sha1 = "1f708af472f577f57be86dc6be9ddb68b0b48c93"
+  git-tree-sha1 = "1f708af472f577f57be86dc6be9ddb68b0b48c93"
+  nix-sha256 = "0sjarbq1azwp0jnfifv979shhi945hxh2mp1py4dydpbhwkbxm2l"
 
 ["0.1.13"]
-git-tree-sha1 = "999505c0beaf9d757f2d7721ab2da3151b358e76"
+  git-tree-sha1 = "999505c0beaf9d757f2d7721ab2da3151b358e76"
+  nix-sha256 = "0lgfbrbpwli07vgb8jjppjzl51j5py7zhgj0gxdz4y373m99m5ab"
 
 ["0.1.14"]
-git-tree-sha1 = "c8426b65bcbac71bdc196ef1eabf1323d8252844"
+  git-tree-sha1 = "c8426b65bcbac71bdc196ef1eabf1323d8252844"
+  nix-sha256 = "1r6h1l8z9ipvclrnmjn8v2mhqvddrgl8f8bidsb7vwbnr6vf4218"
 
 ["0.1.15"]
-git-tree-sha1 = "1b7f17dc31d61311bbe3c7cf0dca77c9bf7906de"
+  git-tree-sha1 = "1b7f17dc31d61311bbe3c7cf0dca77c9bf7906de"
+  nix-sha256 = "0p6jnjd78lwg0r693q4bb0h4n9128k15w9p4qnf0kl6djk5fb8r8"
 
 ["0.1.16"]
-git-tree-sha1 = "137fe5cd3758134bf523eccb368de55041023a3d"
+  git-tree-sha1 = "137fe5cd3758134bf523eccb368de55041023a3d"
+  nix-sha256 = "1jscgqj5m4rs48wj5fpci5nmn27906gp7p0vdjc2mbqxy350hwif"
 
 ["0.1.17"]
-git-tree-sha1 = "b82d46bba8c4c5500d03fc832fee57f3774813e7"
+  git-tree-sha1 = "b82d46bba8c4c5500d03fc832fee57f3774813e7"
+  nix-sha256 = "1d2cvngm9c1kcw7ay2yh6vv5i7g7va9rfqcjxm20ixpg89ndjrxl"
 
 ["0.1.18"]
-git-tree-sha1 = "9890bad9956868bad99f8bc593cf811af3557b42"
+  git-tree-sha1 = "9890bad9956868bad99f8bc593cf811af3557b42"
+  nix-sha256 = "0ljaq5rcj1bjmn0mb1mgrq21qpzpy0b85fhpdz9v3fgvxy5vcw7v"
 
 ["0.1.19"]
-git-tree-sha1 = "bdf93bac5522e117003e0a71c2e7f3baab4a8709"
+  git-tree-sha1 = "bdf93bac5522e117003e0a71c2e7f3baab4a8709"
+  nix-sha256 = "0irp5jq47ln4pqimz53y1r7ns6nzcbf8wpd0r7mf34644lgwvylj"
+
+["0.1.2"]
+  git-tree-sha1 = "a63fad6555da1fb46ebb6bbd8f430b5f6bac7c3e"
+  nix-sha256 = "1932b3mjhwv6qdf9iv562nqdrz3ca08hi6yfvb32bxcb4qfrna5c"
 
 ["0.1.20"]
-git-tree-sha1 = "d5b27f265e12bfaeab2bdf990c7abddf6155a3e2"
+  git-tree-sha1 = "d5b27f265e12bfaeab2bdf990c7abddf6155a3e2"
+  nix-sha256 = "1i7rrancysx6nplcish2pd36rm4lyz2ihl5m176zdrx94v5cmirp"
 
 ["0.1.21"]
-git-tree-sha1 = "ad66268d396777af0a83fa6cb92c0d17b963cac3"
+  git-tree-sha1 = "ad66268d396777af0a83fa6cb92c0d17b963cac3"
+  nix-sha256 = "06ppcih6md558yz6csgm0zwdmqi4bgps2s247a1d7yv7zsbba109"
 
 ["0.1.22"]
-git-tree-sha1 = "7a4b2fe7c45ab84d5744c1106a158a6eaf4449cc"
+  git-tree-sha1 = "7a4b2fe7c45ab84d5744c1106a158a6eaf4449cc"
+  nix-sha256 = "04n912wzlpy5mky33ily0p8qmjf59fbmc0i9lppig98lgwsmw5jg"
 
 ["0.1.23"]
-git-tree-sha1 = "302f157c3e66a9890ea8c24855c234bde8d3142f"
+  git-tree-sha1 = "302f157c3e66a9890ea8c24855c234bde8d3142f"
+  nix-sha256 = "0j1x6qnijy0di2q2qfn921gj53n1j0jjv5najc478raf208il9xy"
 
 ["0.1.24"]
-git-tree-sha1 = "88ea09cff477b4a2ed42629e965fbde5ca7f65ba"
+  git-tree-sha1 = "88ea09cff477b4a2ed42629e965fbde5ca7f65ba"
+  nix-sha256 = "1qicj3ia3jlgvvp8y268gdqapzk8fcirr16vay5vva1mafinwhz9"
 
 ["0.1.25"]
-git-tree-sha1 = "dfa0e7489a55f8582991ab7ea9faaf2a10d9b9c0"
+  git-tree-sha1 = "dfa0e7489a55f8582991ab7ea9faaf2a10d9b9c0"
+  nix-sha256 = "14ahb9mknn50419m40jwx45r0vldprchxfvql7zimakz1gw0vyz5"
+
+["0.1.3"]
+  git-tree-sha1 = "d0244aebf1d02dc9c61e5b747d3fbbc4b66dda90"
+  nix-sha256 = "112m90hcl4jfkhg8645yh471w0nc1yxy4r86da2cjmy80vz9a3ml"
+
+["0.1.4"]
+  git-tree-sha1 = "67506990b6559bbbdbc27504c4fef97449a0e969"
+  nix-sha256 = "1s9xk0lqd47c8csmqga0kbdcl6yrbxkd16p8dv84w2fgwadv353f"
+
+["0.1.5"]
+  git-tree-sha1 = "333346fe8ecf40f3e19cc8161c4715a7a58ec232"
+  nix-sha256 = "08fn2s1sga3ng85kinsmjd2ghznd427sivjc27rxc5lhg3q2ib5r"
+
+["0.1.6"]
+  git-tree-sha1 = "7570f008f12fd6285929d9ddee2201504e85eff2"
+  nix-sha256 = "0f42v3cl6az475w6hxajchxfram77fvnr8asb8zbclqz8rbxa91y"
+
+["0.1.7"]
+  git-tree-sha1 = "962cadb853882a579d885bb0c7d5b7cc72d8b10b"
+  nix-sha256 = "04qynr7hv290m6brcxmz531sdqzcmil3dmq5kziy0fbmmw861kwq"
+
+["0.1.8"]
+  git-tree-sha1 = "9ccd136c4b97b97bfedfbfcfad5c616170dafb17"
+  nix-sha256 = "0c5j8b6m2m4jhsax0d50xgwll9qw3vss8l91jvlqx64za1rqvx5j"
+
+["0.1.9"]
+  git-tree-sha1 = "adae8a5ff79e0ebc37ae2629f59f5c18aa1e1125"
+  nix-sha256 = "1cz7sjzcvrqjgix0bw8g30r1r0h27p5g2py1q9a00x4580sin6y8"
 
 ["0.2.0"]
-git-tree-sha1 = "9ecd9bdcec5e9df870765553f150378460827202"
+  git-tree-sha1 = "9ecd9bdcec5e9df870765553f150378460827202"
+  nix-sha256 = "0afpv8mn739zmlb3hggj7m7jj64gg7nzrvqwlcbva8glhm1ic1r9"
 
 ["0.2.1"]
-git-tree-sha1 = "3e924517fd2206a887e13db408e96ca96ab23da9"
+  git-tree-sha1 = "3e924517fd2206a887e13db408e96ca96ab23da9"
+  nix-sha256 = "0q2qxg4qrskrxcpl3q2rh7y3am2rlka0rjvhw7zypzij1iw3li7i"
 
 ["0.2.2"]
-git-tree-sha1 = "f4ac5e390cb615f5d20bed7db2b30e071806bcb2"
+  git-tree-sha1 = "f4ac5e390cb615f5d20bed7db2b30e071806bcb2"
+  nix-sha256 = "1d5sccwp2ngz0817h12v9vksqldz1cg16a8134fgzsm8srha2bvb"
 
 ["0.2.3"]
-git-tree-sha1 = "0a2cc912c27459fa33ea6a30699967ab67237e45"
+  git-tree-sha1 = "0a2cc912c27459fa33ea6a30699967ab67237e45"
+  nix-sha256 = "0pvbddhhklz7kbn3zdybq96544v0bzddpnv6ac323mawa3yc7syq"
 
 ["0.2.4"]
-git-tree-sha1 = "8bcd5dfc972e41c1d6a30f072b9f33bd331a086f"
+  git-tree-sha1 = "8bcd5dfc972e41c1d6a30f072b9f33bd331a086f"
+  nix-sha256 = "0941637iml69cx0bc3dfmxkiwgpscsghmvb0g5m9ajq628mgf3bz"
